[workspace]
members = ["moonbeam", "moonbeam-attributes"]
resolver = "3"

[workspace.package]
authors = ["Jens Taylor"]
description = "A single-threaded async HTTP server"
keywords = ["http-server", "async", "single-threaded"]
categories = ["web-programming::http-server", "asynchronous"]
repository = "https://github.com/jensyt/moonbeam"
edition = "2024"
license = "MIT"
