[workspace]
members = [
    "moonbeam",
    "moonbeam-attributes",
    "moonbeam-serde",
    "moonbeam-forms",
    "examples/basic",
    "examples/routing",
    "examples/concurrent",
    "tests/integration",
]
default-members = ["moonbeam", "moonbeam-attributes", "moonbeam-serde", "moonbeam-forms"]
resolver = "3"

[workspace.package]
authors = ["Jens Taylor"]
description = "A single-threaded-first async HTTP server"
keywords = ["http-server", "async", "single-threaded"]
categories = ["web-programming::http-server", "asynchronous"]
repository = "https://github.com/jensyt/moonbeam"
edition = "2024"
license = "MIT"
