[package]
name = "moonbeam-forms"
version = "0.3.0"
description = "HTML form and multipart support for Moonbeam"
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
moonbeam = { path = "../moonbeam", version = "0.7", default-features = false }
httparse = "1.10"

[dev-dependencies]
moonbeam = { path = "../moonbeam", version = "0.7", features = ["router"] }
