[package]
name = "moonbeam-serde"
version = "0.1.0"
description = "Serde support for Moonbeam"
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
moonbeam = { path = "../moonbeam", version = "0.4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
moonbeam = { path = "../moonbeam", version = "0.4", features = ["router"] }
