[package]
name = "moonbeam"
version = "0.4.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
httparse = "1.10"
httpdate = "1.0"
futures-lite = {version = "2.6", default-features = false, features = ["std"]}
async-executor = {version = "1.13"}
async-io = "2.6"
async-net = "2.0"
tracing = {version = "0.1", default-features = false, features = ["std"], optional = true}
async-signal = {version = "0.2", optional = true}
blocking = "1.6"
moonbeam-attributes = {path = "../moonbeam-attributes", version = "0.1.3", optional = true}
flate2 = {version = "1.1", optional = true}
brotli = {version = "8", optional = true, features = ["std"]}
flume = {version = "0.12", default-features = false, features = ["async"]}

[features]
default = ["assets", "macros", "catchpanic", "signals", "router"]
signals = ["dep:async-signal"]
tracing = ["dep:tracing"]
assets = []
macros = ["dep:moonbeam-attributes"]
catchpanic = []
compress = ["dep:flate2", "dep:brotli"]
router = ["macros", "moonbeam-attributes/router", "moonbeam-attributes/autohead"]
mt = []
disable-simd = []

[dev-dependencies]
piper = "0.2"
