[package]
name = "tokio-benchmark"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }

[[bin]]
name = "hello"
path = "src/bin/hello.rs"

[[bin]]
name = "static"
path = "src/bin/static.rs"
