[package]
name = "examples-tracing"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
moonbeam = { path = "../../moonbeam", default-features = false, features = ["macros", "router", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
async-io = "2.6"
